Fix styles on IE.

--- a/src/htdocs/css/button.scss
+++ b/src/htdocs/css/button.scss
@@ -75,12 +75,7 @@ button {
 		&:after {
 			position: absolute;
 			right: 0;
-			top: 0;
-			bottom: 0;
-			padding: 0;
-			margin: 0;
 
-			line-height: 3rem;
 			width: 3em;
 			text-align: center;
 			border-radius: 0 2px 2px 0;
