--- a/src/htdocs/css/form.scss
+++ b/src/htdocs/css/form.scss
@@ -35,6 +35,7 @@ input[type="checkbox"] {
 	display: inline;
 	height: 3rem;
 	margin: 0 6px 3px 9px;
+	border: 0;
 }
 
 label {
